--- a/Colab RDP/Colab RDP.ipynb
+++ b/Colab RDP/Colab RDP.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/PradyumnaKrishna/Colab-Hacks/blob/master/Colab%20RDP/Colab%20RDP.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/mrfoxie/colab/blob/master/Colab%20RDP/Colab%20RDP.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -39,7 +39,7 @@
         "\n",
         "Google Colab can give you Instance with 12GB of RAM and GPU for 12 hours (Max.). Anyone can use it to perform Heavy Tasks\n",
         "\n",
-        "To use other similiar Notebooks use my Repository **[Colab Hacks](https://github.com/PradyumnaKrishna/Colab-Hacks)**"
+        "To use other similiar Notebooks use my Repository **[Colab Hacks](https://github.com/mrfoxie/colab)**"
       ]
     },
     {
@@ -173,7 +173,7 @@
         "id": "p_9JGChxxKDs"
       },
       "source": [
-        "! wget https://github.com/PradyumnaKrishna/Colab-Hacks/raw/master/Colab%20RDP/install.sh -P /home/$username"
+        "! wget https://github.com/mrfoxie/colab/raw/master/Colab%20RDP/install.sh -P /home/$username"
       ],
       "execution_count": null,
       "outputs": []
